--- a/simple.html
+++ b/simple.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Copyright 2022 git.training -->
 <head>
 	<title>an example website</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
